2001-01-23  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/math.h (signgam): Regress previous fix as
	it does not handle programs with extern int signgam in them.

2001-01-23  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/math.h (signgam): Changed to a macro refering to
	its location in the reentrant structure.

2001-01-23  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/stdio/vfprintf.c (_VFPRINTF_R): Modification to fix
	that suppressed . for %.0f, 0.1.  Check now looks if there
	are padding zeroes (expt) in addition to any digits (ndig) to
	print.

2001-01-18  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/sys/arc/Makefile.am: New file.
	* libc/sys/arc/Makefile.in: Ditto.
	* libc/sys/arc/aclocal.m4: Ditto.
	* libc/sys/arc/configure: Ditto.
	* libc/sys/arc/configure.in: Ditto.
	* libc/sys/arc/crt0.S: Ditto.
	* libc/sys/arc/isatty.c: Ditto.
	* libc/sys/arc/mem-layout.c: Ditto.
	* libc/sys/arc/sbrk.c: Ditto.
	* libc/sys/arc/syscalls.c: Ditto.
	* libc/sys/arc/sys/syscall.h: Ditto.

Wed Jan 17 23:20:56 2001  Christopher Faylor <cgf@cygnus.com>

	* libc/include/sys/unistd.h: Use correct declaration for setdtablesize.

Fri Jan 12 00:34:31 2001  Christopher Faylor <cgf@cygnus.com>

	* libc/include/sys/signal.h: Add some SA_* defines for Cygwin.

Thu Jan 11 20:42:06  2001  Earnie Boyd  <earnie_boyd@yahoo.com>

	* libc/include/sys/features.h: __CYGWIN__ preferred over __CYGWIN32__

2001-01-09  Nick Clifton  <nickc@redhat.com>

	* configure.host (v859): Remove unsupported compiler options.

Fri Jan  5 19:57:00 EST 2001  Aaron J. Grier  <aaron@frye.com>

	* src/newlib/configure.host (*-*-rtems*): add printf long long
	support for RTEMS.

2000-12-19  Graham Stott <grahams@redhat.com>

        * libc/machine/xscale/memcmp.c (memcmp): Add clobber for "lr".

Wed Dec 14  Jeff Johnston  <jjohnstn@redhat.com>

	* configure.host: Turn on long double I/O for Cygwin.

Wed Dec 14  Jeff Johnston  <jjohnstn@redhat.com>

	* MAINTAINERS: Removed Ranjith.